paleta de colores

--- a/index.html
+++ b/index.html
@@ -6,23 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido TIENDA CLOTHES</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Ubuntu&display=swap" rel="stylesheet">  
 </head>
 <body>
     <!--Header-->
     <div class="header">
         <ul class="menu">
             <li><a href="#">TIENDA CLOTHES</a></li>
-            <li class="derecha"><a href="#">NOSOTROS</a></li>
-            <li class="derecha"><a href="#">ACCESORIOS</a></li>
-            <li class="derecha"><a href="#">PROXIMAMENTE</a></li>
-            <li class="derecha"><a href="#">COLLECCION</a></li>
-            <li class="derecha"><a href="#">NOVEDADES</a></li>
+            <div class="derecha">
+                <li><a href="#">NOVEDADES</a></li>
+                <li><a href="#">COLLECCION</a></li>
+                <li><a href="#">ACCESORIOS</a></li>
+                <li><a href="#">PROXIMAMENTE</a></li>
+                <li><a href="#">NOSOTROS</a></li>
+            </div>
+
         </ul>
     </div>
     
     <!--Main-->
     <div class="main">
-        <h1>BIENVENIDO A TIENDA CLOTHES</h1>
         <div class="novedades">
             <h2>NOVEDADES</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, recusandae!</p>
@@ -42,6 +45,7 @@
         <div class="nosotros">
             <h2>NOSOTROS</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, distinctio.</p>
+        </div>
         </div>
     </div>
 
