colores y districion  en general

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <!--Header-->
     <div class="header">
         <ul class="menu">
-            <li><a href="#">TIENDA CLOTHES</a></li>
+            <li class="color" ><a href="#">TIENDA CLOTHES</a></li>
             <div class="derecha">
                 <li><a href="#">NOVEDADES</a></li>
                 <li><a href="#">COLLECCION</a></li>
-                <li><a href="#">ACCESORIOS</a></li>
+                <li><a href="#">CALZADO</a></li>
                 <li><a href="#">PROXIMAMENTE</a></li>
                 <li><a href="#">NOSOTROS</a></li>
             </div>
@@ -28,30 +28,34 @@
     <div class="main">
         <div class="novedades">
             <h2>NOVEDADES</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, recusandae!</p>
+            <p>Llegarons las nuevas prendas con las mejores texturas y calidad</p>
         </div>
+
         <div class="collecion">
             <h2>COLLECCIÓN</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, non!</p>
+            <p>Nuestra completa colección, con prendas clasicas y armar tu conjunto preferido.</p>
         </div>
-        <div class="accesorios">
-            <h2>ACCESORIOS</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores, voluptatem?</p>
+
+        <div class="calzado">
+            <h2>CALZADO</h2>
+            <p>Nuesta calidad en los calzados es tan alta como las de nuestros calzados.</p>
         </div>
+
         <div class="proximamente">
-            <h2>PROXIMAMENTE</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, architecto!</p>
+            <h2 >PROXIMAMENTE</h2>
+            <p>Nuevos prendas nuevos colores y texturas, están por llegar...</p>
         </div>
+
         <div class="nosotros">
             <h2>NOSOTROS</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, distinctio.</p>
+            <p>La historia de nuestra tienda esta alineada con la calidad de nuestra atención.</p>
         </div>
-        </div>
+
     </div>
 
     <!--Footer-->
     <div class="footer">
-        <h3></h3>
+        <h3>Puedes encontrarnos en ...</h3>
         <p></p>
     </div>
     
