--- a/index.html
+++ b/index.html
@@ -45,18 +45,32 @@
             <h2 >PROXIMAMENTE</h2>
             <p>Nuevos prendas nuevos colores y texturas, están por llegar...</p>
         </div>
-
-        <div class="nosotros">
-            <h2>NOSOTROS</h2>
-            <p>La historia de nuestra tienda esta alineada con la calidad de nuestra atención.</p>
-        </div>
-
     </div>
 
     <!--Footer-->
     <div class="footer">
-        <h3>Puedes encontrarnos en ...</h3>
-        <p></p>
+        <div class="bloque">
+            <h4 class="colorDos">TIENDA CLOTHES</h4>
+        </div>
+        <div class="bloque">
+            <h3 >Informacion:</h3>
+            <p>Acerca de nosotros.</p>
+            <p>Nuestras tiendas.</p>
+            <p>Trabaja con nosotros.</p>
+        </div>
+        <div class="bloque">            
+            <h3>Encuentranos:</h3>
+            <p>Instagram</p>
+            <p>Facebook</p>
+            <p>Twitter</p>
+        </div>
+        <div class="bloque">
+            <h3>Servicio al Cliente:</h3>
+            <p>Mapa del sitio.</p>
+            <p>Contacto.</p>
+            <P>Suscribete.</P>
+        </div>
+
     </div>
     
     <script src="./app.js"></script>
