sume font awesome  y hover

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Bienvenido TIENDA CLOTHES</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Ubuntu&display=swap" rel="stylesheet">  
+    <script src="https://kit.fontawesome.com/4b372a6cbd.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Header-->
     <div class="header">
         <ul class="menu">
-            <li class="color" ><a href="#">TIENDA CLOTHES</a></li>
+            <li class="color" ><a href="#">TIENDA <i class="fas fa-store-alt"></i> CLOTHES</a></li>
             <div class="derecha">
                 <li><a href="#">NOVEDADES</a></li>
                 <li><a href="#">COLLECCION</a></li>
@@ -50,7 +51,7 @@
     <!--Footer-->
     <div class="footer">
         <div class="bloque">
-            <h4 class="colorDos">TIENDA CLOTHES</h4>
+            <h4 class="colorDos">TIENDA <i class="fas fa-store-alt"></i> CLOTHES</h4>
         </div>
         <div class="bloque">
             <h3 >Informacion:</h3>
@@ -60,9 +61,9 @@
         </div>
         <div class="bloque">            
             <h3>Encuentranos:</h3>
-            <p>Instagram</p>
-            <p>Facebook</p>
-            <p>Twitter</p>
+            <p><i class="fab fa-instagram-square"></i> Instagram</p>
+            <p><i class="fab fa-facebook-square"></i> Facebook</p>
+            <p><i class="fab fa-twitter-square"></i> Twitter</p>
         </div>
         <div class="bloque">
             <h3>Servicio al Cliente:</h3>
